# RegulationCoder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  compliance_report.html  compliance_report.json  docker-compose.yml  my_report.html  my_report.json  pyproject.toml
audit_logs/: audit.jsonl
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ComplianceChart.tsx  RuleResultRow.tsx  ScoreCard.tsx
dashboard/src/hooks/: useCountUp.ts
dashboard/src/lib/: api.ts
output/: talentscreen_report.html  talentscreen_report.json
scripts/: generate_demo_profile.py  run_demo_pipeline.py
src/regulationcoder/: __init__.py
src/regulationcoder/api/: __init__.py  app.py
src/regulationcoder/audit/: __init__.py  chain.py  logger.py
src/regulationcoder/cli/: __init__.py  main.py
src/regulationcoder/codegen/: __init__.py  mapping_generator.py  sdk_generator.py  test_generator.py
src/regulationcoder/core/: __init__.py  ai_analyzer.py  config.py  engine.py  exceptions.py  judge.py  pipeline.py
src/regulationcoder/db/: __init__.py  models.py  session.py
src/regulationcoder/diff/: __init__.py  impact_mapper.py  semantic_differ.py  text_differ.py
src/regulationcoder/exporters/: __init__.py  html_exporter.py  json_exporter.py  pdf_exporter.py
tests/: conftest.py
tests/fixtures/: talentscreen_profile.json
tests/integration/: test_pipeline.py
tests/unit/: test_audit.py  test_engine.py  test_exporters.py  test_models.py  test_parser.py
(+59 files in other folders)
